--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ url:                 https://bioboot.github.io
 
 # Set to '' when hosting a blog on GitHub Pages, ie on `//<username>.github.io`
 # Set to '/<reponame>' when using the `gh-pages` branch of a repository
-baseurl:             /bimm143_F18
+baseurl:             /bimm143_W19
 
 # A very short description of your page
 tagline:             An introductory hands-on course in Bioinformatics for Biology majors at UCSD.
@@ -43,7 +43,7 @@ author:
   email:             bjgrant@ucsd.edu
 
 # Fallback image and color (note you can have a page specific sidebar image and color from yml)
-image:               /bimm143_F18/assets/img/dna.jpg
+image:               /bimm143_W19/assets/img/dna.jpg
 ##-image:               '{{ site.baseurl }}/assets/img/dna.jpg'
 color:               '#4f86aa'
 
@@ -68,7 +68,7 @@ google_fonts:        Roboto+Slab:700|Noto+Sans:400,400i,700,700i
 disqus_shortname:    bimm143
 
 # This text will appear in the footer of every page. Markdown enabled.
-copyright:           '&copy; 2018 [Barry J. Grant](). All rights reserved.'
+copyright:           '&copy; 2019 [Barry J. Grant](). All rights reserved.'
 
 # Format of the permalinks
 permalink:           pretty
