--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,11 +11,12 @@ barry:
     Course Director
     : [Prof. Barry J. Grant](http://thegrantlab.org/) (Email: <bjgrant@ucsd.edu>)
 
-    Instructional Assistant
-    : Chao Shi (Email: <bioshichao@gmail.com>)  
+    Instructional Assistants
+    : Alena Martsul (Email: <amartsul@ucsd.edu>)
+    : Kelly Flanders (Email: <kflander@ucsd.edu>)  
 
     Course Syllabus
-    : [Fall 2018 (PDF)](https://bioboot.github.io/bimm143_F18/class-material/BIMM143_F18_syllabus.pdf){:.no-push-state}
+    : [Winter 2019 (PDF)](https://bioboot.github.io/bimm143_F18/class-material/BIMM143_W19_syllabus.pdf){:.no-push-state}
     {:.message}
 
 #    : [Ileena Mitra](https://bioboot.github.io/bggn213_f17/ileenamitra@eng.ucsd.edu) (Email: <ileenamitra@eng.ucsd.edu>)
@@ -26,7 +27,7 @@ barry:
 
   # This photo will be used in the about section
   picture:
-    src:             /bimm143_F18/assets/img/logo.png
+    src:             /bimm143_W19/assets/img/logo.png
 ##    src:             '{{ site.baseurl }}/assets/img/logo.png'
     # srcset is optional, but can be used to provide higher res versions for retina displays
     #srcset:
@@ -73,7 +74,7 @@ barry:
     # stumbleupon:     <username>
     # paypal:          <username>
     email:           mailto:<bjgrant@ucsd.edu>
-    rss:             https://bioboot.github.io/bimm143_S18/feed.xml
+    rss:             https://bioboot.github.io/bimm143_W19/feed.xml
 
 # Another author
 ileena:
